objects/CN_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for which the relationship applies</description>
        <inlineHelpText>Account for which the relationship applies</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CN Relationships</relationshipLabel>
        <relationshipName>CN_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Emails__c</fullName>
        <description>Semi-colon separated list of all email addresses belong to a contact or colleague</description>
        <inlineHelpText>Semi-colon separated list of all email addresses belong to a contact or colleague</inlineHelpText>
        <label>All Emails</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Phones__c</fullName>
        <description>Semi-colon separated list of all phone numbers belong to a contact or colleague</description>
        <inlineHelpText>Semi-colon separated list of all phone numbers belong to a contact or colleague</inlineHelpText>
        <label>All Phones</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CNID__c</fullName>
        <description>Unique Id from CN which represents either a single contact or colleague</description>
        <inlineHelpText>Unique Id from CN which represents either a single contact or colleague</inlineHelpText>
        <label>CNID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Webservice_Queue__c</fullName>
        <description>Identifies the CN web service API for which the relationships were obtained</description>
        <inlineHelpText>Identifies the CN web service API for which the relationships were obtained</inlineHelpText>
        <label>CN Webservice Queue</label>
        <referenceTo>CN_Webservice_Queue__c</referenceTo>
        <relationshipLabel>CN Relationships</relationshipLabel>
        <relationshipName>CN_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_CNID__c</fullName>
        <description>Company unique id which is maintained by CN</description>
        <inlineHelpText>Company unique id which is maintained by CN</inlineHelpText>
        <label>Company CNID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact for which the relationship applies</description>
        <inlineHelpText>Contact for which the relationship applies</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CN Relationships</relationshipLabel>
        <relationshipName>CN_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department that belongs to a colleague</description>
        <inlineHelpText>Department that belongs to a colleague</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Email__c</fullName>
        <description>First email address belongs to a contact or colleague</description>
        <inlineHelpText>First email address belongs to a contact or colleague</inlineHelpText>
        <label>First Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Phone__c</fullName>
        <description>First phone number for a contact or colleague</description>
        <inlineHelpText>First phone number for a contact or colleague</inlineHelpText>
        <label>First Phone</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <description>Firstname for a contact or colleague</description>
        <inlineHelpText>Firstname for a contact or colleague</inlineHelpText>
        <label>First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullname__c</fullName>
        <description>Concatenated value (Firstname + Lastname). If the concatenated value is empty, Email is stored.</description>
        <inlineHelpText>Concatenated value (Firstname + Lastname). If the concatenated value is empty, Email is stored.</inlineHelpText>
        <label>Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modification_Time__c</fullName>
        <description>Date/Time when the contact or colleague was last updated in CN</description>
        <inlineHelpText>Date/Time when the contact or colleague was last updated in CN</inlineHelpText>
        <label>Last Modification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <description>Lastname for a contact or colleague</description>
        <inlineHelpText>Lastname for a contact or colleague</inlineHelpText>
        <label>Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normalized_Score__c</fullName>
        <description>Score value that identifies relationship strength for contact or colleague</description>
        <inlineHelpText>Score value that identifies relationship strength for contact or colleague</inlineHelpText>
        <label>Normalized Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raw_Score__c</fullName>
        <description>Raw Score (Non Normalized)</description>
        <inlineHelpText>Raw Score (Non Normalized)</inlineHelpText>
        <label>Raw Score</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Collection of sources from which the relationship information was fetched by CN</description>
        <inlineHelpText>Collection of sources from which the relationship information was fetched by CN</inlineHelpText>
        <label>Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IsEmail</fullName>
                </value>
                <value>
                    <fullName>IsAddressBook</fullName>
                </value>
                <value>
                    <fullName>IsPhone</fullName>
                </value>
                <value>
                    <fullName>IsInterAction</fullName>
                </value>
                <value>
                    <fullName>IsTimeAndBilling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title that belongs to contact or colleague</description>
        <inlineHelpText>Title that belongs to contact or colleague</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Location__c</fullName>
        <description>Working location for contact or colleague</description>
        <inlineHelpText>Working location for contact or colleague</inlineHelpText>
        <label>Working Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CN Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>CNID__c</columns>
        <columns>Contact__c</columns>
        <columns>Department__c</columns>
        <columns>First_Email__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>First_Phone__c</columns>
        <columns>Normalized_Score__c</columns>
        <columns>Source__c</columns>
        <columns>Title__c</columns>
        <columns>Company_CNID__c</columns>
        <columns>Last_Modification_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WQ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CN Relationships</pluralLabel>
    <recordTypes>
        <fullName>Colleague</fullName>
        <active>true</active>
        <description>Represents a colleague record from ContactNet</description>
        <label>Colleague</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Represents a contact record from ContactNet</description>
        <label>Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>